AES with ecdh for individual chats
Signed-off-by: shashank68 <shashankindiamanoj@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,10 @@ MANIFEST
 
 
 .env
-*.session
+*.session*
 *.pem
 *.db
+blobs/
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
